0.4.1 to 0.4.2
==============

* Headers manipulation methods now update the session headers and make it avaible for all requests (thanks to Mark Owen)
* The ``submit_form`` method now send correcty the headers (thanks to Mark Owen)
* Now using SocketServer for unit testing (thanks to Mark Owen)
* Global unit tests improvements (thanks to Mark Owen)

0.4.2 to 0.4.3
==============

* Remove ``_headers`` property to browser object, the headers manipulation functions now impact directly the
``Browser.session.headers`` dict
* Since ``headers`` keyword argument isn't called anymore, you can add specific headers for a single request
* Add a better history support. The history is now an object and has a previous and a next function, see the docs for
all informations
* Improve tests for new history
* Updated docuementation for history

Backward compatibility breaks :

* the private property ``_headers`` no longer exists